package de.hhu.chicken.service.logger;

public interface UrlaubsterminLogger {

  void eintragen(String logNachricht);
}
